# trackcase-service

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  alembic.ini  app.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python.yml
src/trackcase_service/: main.py
src/trackcase_service/api/: calendars.py  calendars_api.py  case_collection_api.py  case_type_api.py  cash_collection_api.py  client.py  client_api.py  collection_method_api.py  collections.py  common_api.py  court.py  court_api.py  court_case.py  court_case_api.py  data_import.py  filing.py  form_api.py  form_status_api.py  form_type_api.py  hearing_calendar_api.py  hearing_type_api.py  history_form_api.py  judge.py  judge_api.py  note_api.py  ref_types.py  scraper.py  task_calendar_api.py  task_type_api.py  user_management.py  user_management_noauth.py
src/trackcase_service/db/: crud.py  models.py  schemas.py  session.py
src/trackcase_service/migrations/: env.py
src/trackcase_service/service/: calendars.py  case_collection_service.py  case_type_service.py  cash_collection_service.py  client.py  client_service.py  collection_method_service.py  collections.py  court.py  court_case.py  court_case_service.py  court_service.py  data_import.py  filing.py  form_service.py  form_status_service.py  form_type_service.py  hearing_calendar_service.py  hearing_type_service.py  history_form_service.py  history_service.py  judge.py  judge_service.py  note_service.py  ref_types.py  schemas.py  scraper.py  (+3 more)
tests/trackcase_service_test/: main_test.py
(+37 files in other folders)
